<resources>
    <string name="exit_text">ပိတ္ရေတာ့မွာလား?</string>
    <string name="exit_btn_y">ပိတ္ေတာ့</string>
    <string name="exit_btn_n">ေနဦး</string>
    <string name="app_name">BayDin</string>
    <string name="welcome_text">ျမန္မာေဗဒင္</string>
    <string name="action_settings">Settings</string>
    <string name="icon_text">B</string>
    <string name="btnOne_text">မဟာဘုတ္ေဟာကိန္း</string>
    <string name="btnTwo_text">မဟာဘုတ္ခုစားေဟာကိန္း</string>
    <string name="btnThree_text">သက္ေရာက္ေဟာကိန္း</string>
    <string name="btnFour_text">လက္ေထာက္ေဗဒင္</string>
    <string name="select_text">ေမြးသကၠရာဇ္ : </string>
    <string name="select_btn_text">ေရြးပါ</string>
    <string name="calcu_btn_text">တြက္ပါ</string>
    <string name="luckboard_title">ေမးခြန္းကို အာရံုစူးစိုက္ပါ။ ေမးခြန္း၏ အေျဖကို စိတ္ျဖင့္ေတာင့္တပါ။ မ်က္စိမွိတ္ထားပါ။</string>
    <string name="question_text">ေမးခြန္းနံပါတ္</string>
    <string name="bg_p"> ဘဂၤဖြား</string>
    <string name="puti_p"> ပုတိဖြား</string>
    <string name="tite_p"> သိုက္ဖြား</string>
    <string name="mrn_p"> မရဏဖြား</string>
    <string name="adpt_p"> အဓိပဓိဖြား</string>
    <string name="yz_p"> ရာဇဖြား</string>
    <string name="atun_p"> အထြန္းဖြား</string>
    <string name="bg_text"> ငယ္ရြယ္စဥ္ကာလမွာပင္ ေရာဂါေဝဒနာက အေဖာ္အျဖစ္လိုက္ပါလာျပီး အေတာ္ကေလးကို ခ်ဴခ်ာတတ္ပါသည္။ အရြယ္ေရာက္လာေသာအခါ၌ စိုးရိမ္မႈ လြန္ကဲတတ္သကဲ့သို႔ ပူေဆြးလြယ္သူျဖစ္သည္။ ေၾကာက္ရြံ႕ထိတ္လန္႔တတ္ပါသည္။ စည္းစိမ္ဥစၥာမ်ား ပ်က္စီးဆံုးပါးတတ္ပါသည္။ ဒုကၡအဖံုဖံုေတြ႕ၾကံဳရမည္။ အထူးသျဖင့္ အရွက္တကြဲ အက်ိဳးနည္းစရာ ၾကံဳတတ္ျပီး၊ ထိုအျဖစ္မွ လြန္ေျမာက္ပါက ေကာင္းစားတတ္ပါသည္။</string>
    <string name="puti_text">ငယ္စဥ္က လြန္စြာခ်ဴခ်ာပါလိမ့္မည္။ မက်န္းမမာ ေရာဂါထူလွသျဖင့္ မိဘမ်ား၊ အိမ္သားမ်ားကိုဒုကၡၡေပးသလိုမ်ိဳး ျဖစ္တတ္ပါသည္။ ေဆးရံုေဆးခန္းႏွင့္ မိတ္ဖြဲ႕ထားသလား၊ေရႊလမ္း၊ ေငြလမ္းေဖာက္ထားသလားဟူ၍ပင္ ေျပာဆိုရေလာက္သူ ျဖစ္ပါသည္။ ၾကီးျပင္း၍ အရြယ္ေရာက္လာသည့္အခါ၌လည္း ဂဏွာမျငိမ္၊ ေျချငိမ္မရွိလွဘဲ ဟိုေနရာသြားခ်င္၊ သည္ေနရာသြားခ်င္ႏွင့္ အေတာ္ကေလး ေျခမ်ားတတ္သူျဖစ္ပါသည္။ မိမိ၏ ဇာတိရပ္ရြာကို စြန္႔ခြာ၍ အျခားေသာ ေဒသတစ္ခုသို႔ သြားေရာက္ခ်င္ေနသူ၊ သြားေရာက္တတ္သူျဖစ္ျပီး တစ္နယ္တစ္ေက်းမွာပင္ အိမ္ရာထူေထာင္ရတတ္ပါသည္။ ဘဝတစ္ေလွ်ာက္လံုး မထင္မရွားႏွင့္ ဂုဏ္သတင္းေက်ာ္ေဇာမႈ နည္းပါးတတ္ပါသည္။</string>
    <string name="tite_text">အၾကံအစည္ၾကီးမားျပီး ျမင့္ျမင့္မားမားေတြးေခၚတတ္သည္။ မင္းပိုင္း၊ စိုးပိုင္း၌ အၾကီးအကဲေသာ္လည္းေကာင္း၊ ဘုန္းေတာ္ၾကီး၊ ပညာရွိေသာ္လည္းေကာင္း ျဖစ္တတ္သည္။ ေရႊ၊ ေငြ၊ ဥစၥာ၊ ရတနာမ်ား ျပည့္စံုၾကြယ္ဝတတ္သည္။ အမ်ားတကာအေပၚ၌အၾကင္နာတရားထားရွိတတ္သည္။ ေစတနာသဒၶါတရားထက္သန္၍ အလွဴအတန္း၌လည္း ေမြ႕ေလ်ာ္တတ္သည္။ ေရွ႕ေရး၊ ေနာက္ေရးတို႔ကို ေတြးေခၚေျမာ္ျမင္တတ္ျပီး ဥာဏ္ပညာႏွင့္ ျပည့္စံုတတ္သည္။</string>
    <string name="mrn_text">ငယ္ရြယ္စဥ္အခါက ေၾကာက္မက္ဖြယ္ရာ ေဘးအႏၲရာယ္တို႔ႏွင့္ ၾကံဳေတြ႕ရတတ္သည္။ သည့္အတြက္ အျမဲတေစ ေၾကာက္ရြံ႕ထိတ္လန္႔ေနတတ္သည္။ ေရာဂါအႏၲရာယ္ တစ္ခုခုေၾကာင့္ ပ်က္စီးလြယ္ျပီး၊ အကယ္၍ အပ်က္အစီးမွ လြန္ေျမာက္ပါက ဘုန္းေတာ္ၾကီး၊ မယ္သီလရွင္ (သို႔မဟုတ္) အၾကီးအကဲအရာရွိၾကီးမ်ား ျဖစ္တတ္သည္။ ခ်မ္းသာၾကြယ္ဝျပီး လူတန္းေစ့ေနရကာ သုခႏွင့္ ျပည့္စံုတတ္ပါသည္။</string>
    <string name="adpt_text">ဂုဏ္သတင္း ေက်ာ္ေစာတတ္၏ ။ အေၾကာက္အလန္႔မရွိ၊ ရဲ႕ရင့္ျပတ္သားကာ စြန္႔စားလိုစိတ္ရွိသူ ျဖစ္၏ ။ ေနရာတကာ၌ အၾကီးအကဲျဖစ္ျပီး လုပ္ေဆာင္သမွ် ေအာင္ျမင္တတ္၏ ။ အေဟာအေျပာေကာင္းသူ၊ စာခ်ဆရာေတာ္၊ တရားေဟာပုဂၢိဳလ္မ်ား ျဖစ္တတ္၏ ။</string>
    <string name="yz_text">စိတ္ကူးဥာဏ္ ထက္ျမက္ျပီး စိတ္သေဘာထား ေျဖာင့္မတ္မွန္ကန္ျဖဴစင္ သန္႔ရွင္းသည့္ စိတ္ဓာတ္ပို္င္ရွင္ျဖစ္၏။ မင္းပိုင္း၊ စိုးပိုင္း၌ အရာေရာက္ျပီး ဝင္ဆန္႔တတ္၏ ။ ထင္ရွားေက်ာ္ေဇာတတ္၏ ။ သိမ္ေမြ႕ေသာ အႏုပညာလုပ္ငန္းျဖင့္ အသက္ေမြးဝမ္းေက်ာင္း ျပဳရတတ္သည္။</string>
    <string name="atun_text">ေက်ာ္ေဇာထင္ရွားမည့္သူျဖစ္၏ ။ ဂုဏ္သတင္းၾကီးမားျပီး အမ်ားတကာ၏ ရိုေသေလးစားမႈကို ခံရတတ္သည္။ စိတ္ေနစိတ္ထား ျမင့္ျမတ္တတ္ျပီး အၾကံအစည္ၾကီးမားကာ စိတ္ကူးဥာဏ္ စူးရွထက္ျမက္တတ္သည္။ ဥာဏ္ပညာၾကီးမားလ်က္ သတၱိ၊ ဗ်တၱိအရာ၊ လက္ရံုးရည္၊ ႏွလံုးရည္တို႔တြင္ အမ်ားတကာထက္ ထူးခ်ြန္ထက္ျမက္တတ္သူ ျဖစ္သည္။</string>
    <string name="zero_state">သုညၾကြင္းတဲ့ တစ္နည္းအားျဖင့္ အၾကြင္းမရွိတဲ့ ေန႔ဖြားဆိုရင္ ေန႔အခါမွာဖြားဖြား၊ ညအခါမွဖြားဖြား အမ်ားအားျဖင့္ အသားအေရ ျဖဴျဖဴလတ္လတ္၊ စိုစိုေျပေျပရွိမယ္။
        မွီခိုုအားထားေလာက္ေသာ ဆရာေကာင္း၊ သမားေကာင္းႏွင့္ ေတြ႕မယ္။
        တည္ၾကည္ရဲရင့္တဲ့စိတ္ထား၊ သနားၾကင္နာတတ္တဲ့ စိတ္ထား၊ ကိုယ္ခ်င္းစာတရားရွိတဲ့ စိတ္ေစတနာတို႔ႏွင့္ ျပည့္စံုမယ္။ အရာတိုင္း ကိစၥတိုင္းမွာ မွ်မွ်တတ လုပ္ကိုင္ေျပာဆိုတတ္တဲ့ အေလ့အက်င့္ စိတ္ေနသဘာဝမ်ား ရွိမယ္။ 
        “လူေျဖာင့္စိတ္တို” လို႔ အဆိုရွိသလို ဘယ္လိုကိစၥမွာျဖစ္ျဖစ္၊ ဘြင္းဘြင္းရွင္းရွင္း ေျပာဆိုတတ္၊ လုပ္ကို္င္တတ္သူမ်ား ျဖစ္မယ္။
        ေယာက္်ားမ်ားဆိုရင္ မယားရကံ မေကာင္းဘူး။ မိန္းမေၾကာင့္ ကိုယ္စိတ္ႏွစ္ျဖာ ဆင္းရဲရမယ္။ ေသာကမ်ားကိန္းရွိတယ္။
        မိန္းမဆိုရင္လည္း လင္ရကံမေကာင္းဘူး။ ၾကားလူမ်ား၊ မလိုသူမ်ား ကတံုးကတိုက္လုပ္လို႔ လင္ႏွင့္မယား ခိုက္ရန္ျဖစ္ပြားျပီး လင္မယားကြဲကိန္း ျမင္တယ္။
        သားသမီးေရးႏွင့္ ပတ္သက္လို႔ သားသမီးနည္းပါးတတ္တယ္။ ရရွိတဲ့ သားသမီးမ်ားကလဲ မိဘမ်ား စိတ္ခ်မ္းေျမ႕ဖြယ္ရာ ေကာင္းေလာက္ေအာင္ လိမၼာေရးျခားရွိမယ္။ ခ်စ္ခင္ဖြယ္ေကာင္းတဲ့ မ်က္ႏွာ၊ ခ်ိဳသာတဲ့ အမူအရာ ရွိမယ္။ ပညာေရးမွာ ထြန္းေပါက္မယ္။ စိန္ေကာင္း၊ ေက်ာက္ေကာင္းပမာ ရွိမယ့္ သားသမီးမ်ိဳး ျဖစ္မယ္။
        စီးပြားေရးႏွင့္ပတ္သက္လို႔ စီးပြား ကုန္သြယ္ေရာင္းဝယ္ေဖာက္ကားရင္ ၾကီးပြားႏိုင္တယ္။ မင္းမႈထမ္းလခစားအလုပ္မ်ားႏွင့္ အက်ိဳးမေပးဘူး။
        ဇာတိခ်က္ေၾကြ ေမြးရပ္ေျမကို စြန္႔ခြာရမယ္။ တစ္ရပ္တစ္ေက်းမွာ အေျခခ်ျပီး စီးပြားရွာရင္ အက်ိဳးေက်းဇူး ျဖစ္ထြန္းမယ္။ ၾကံတိုင္းေအာင္ျပီး ေဆာင္တိုင္းေျမာက္မယ္။
        ရဟန္းေတာ္မ်ားဆိုရင္ ဒကာရင္း၊ တပည့္ရင္းမ်ားရွိရာ ေမြးရပ္ေျမကို စြန္႔ခြာျပီး တစ္ရပ္တစ္ေက်းသို႔ သြားေရာက္အေျခခ်ႏိုင္မွ ပစၥေလးပါး ဒါယကာ ဒါယိကာမ်ား ေပါမ်ားျပည့္စံုမယ္။ ရဟန္းေတာ္မ်ားဆိုရင္ အသက္ ၄၀-ႏွစ္တြင္ ကံဇာတာညံ့ျပီး ေရာဂါေဝဒနာ ကပ္ျငိႏိုင္ကိန္း၊ မိန္းမဖ်က္၍ သီလပ်က္ကိန္းမ်ား ရွိေပတယ္။</string>
    <string name="one_state">၁-ဂဏန္းၾကြင္းရင္ ေမြးဖြားစဥ္က တိုင္းေရးျပည္ရြာျဖစ္စဥ္မ်ား၊ အတိတ္နိမိတ္မ်ားႏွင့္ ၾကံဳဆံုခဲ့ရအံ့။ က်န္းမာခ်မ္းသာစြာလည္း ေနထိုင္ခဲ့ၾကရမယ္။ 
        မိႏွင့္ဘ ႏွစ္ပါးရွိသည့္အနက္ အဘမ်ိဳးရိုးဘက္ကေက်ာ္ေဇာထင္ရွားျပီး မိေမြကို မခံစားရ။ ေန႔အခ်ိန္၌ ဖြားသူမ်ားျဖစ္ပါက အသားအရည္ျဖဴမယ္။ ညဖက္ဖြားသူျဖစ္ရင္ အသားလတ္ရင္လတ္၊ မလတ္္ရင္ ညိဳမယ္။
        ရည္မွန္းခ်က္ျပင္းျပျပီး အၾကံအစည္ ၾကီးက်ယ္တတ္ၾကမယ္။ မင္းမႈထမ္းဘက္မွာ အၾကီးအကဲေခါင္းေဆာင္။ ဒါမွမဟုတ္ ဘုန္းၾကီးဆိုလဲ ေက်ာင္းထိုင္ျဖစ္ကိန္းရွိတယ္။ သူတစ္ပါးရဲ႕ေနာက္လိုက္အျဖစ္ ေနလိုခ်င္စိတ္ အလ်င္းမရွိၾကဘူး။
        အရြယ္ေရာက္လို႔ အိမ္ေထာင္က်ရင္ မိန္းမၾသဇာခံျဖစ္တတ္ၾကျပီး မိန္းမမ်ားကား ေအာင္ျမင္သည့္သူမ်ား ျဖစ္ၾကမယ္။ ဆရာေကာင္း၊ သမားေကာင္း၊ အမွီအခိုေကာင္းမ်ား၊ အားထားေလာက္သူမ်ားႏွင့္ ေတြ႕ရကိ္န္းရွိတယ္။
        ပညာေရးမွာ ၾကိဳးစားရင္ ၾကိဳးစားသေလာက္ ခံစား စံစားခြင့္ အခြင့္အလမ္းရွိတယ္။ ပညာေရးမွာၾကိဳးစားမယ္ဆိုရင္ ထူးခၽြန္မယ့္သူမ်ား ျဖစ္ၾကတယ္။
        ေငြေရး၊ ေၾကးေရး၊ စီးပြားေရးဘက္မွာ ထင္သေလာက္မွန္းေျခမေပါက္ဘူး။ စီးပြားဥစၥာ အသင့္အတင့္ေလာက္သာ ျဖစ္ထြန္းႏိုင္စရာရွိတယ္။ 
        အသက္ရွည္မယ္။ အေခၽြအရံအေပါင္းအေဖာ္မ်ားကိန္းရွိမယ္။ သားသမီးရတနာမ်ားမယ္။ သားသမီးမ်ားအနက္ သားေယာက္်ားသာ ထြန္းကားျပီး သမီးမိန္းကေလး ဂုဏ္ယူေလာက္ေအာင္ ထြန္းကားကိန္းမရွိဘူး။
        ဘုန္းၾကီးရဟန္းမ်ားျဖစ္ရင္ တပည့္ေကာင္း ဒကာေကာင္းမ်ားႏွင့္ ၾကံဳေတြ႕ျပီး ပစၥည္းေလးပါးဒါယကာမ်ား ေပါၾကြယ္ဝမယ္။ အလိုရွိရာ ပစၥည္းမ်ားႏွင့္ ျပည့္စံုမယ္။
        မင္းမႈထမ္းဘဝႏွင့္သာ အက်ိဳးေပးသူမ်ားျဖစ္မယ္။ စီးပြားကုန္သြယ္ ေရာင္းဝယ္ေဖာက္ကားျခင္းျဖင့္ မွန္းခ်က္ႏွင့္ ႏွမ္းထြက္မကိုက္ ျဖစ္မယ္။
        ေရာင္းဝယ္ေဖာက္ကားရင္လဲ အဂၤါနံႏွင့္ပတ္သက္တဲ့ ပစၥည္းမ်ားကို ေရာင္းဝယ္ေဖာက္ကားသင့္တယ္။ ေဆးဆရာလုပ္မယ္။ ေဆးေရာင္းမယ္ဆိုက အက်ိဳးေပးမယ္။ အစိုးရဌာနမ်ားမွာ မင္းမႈထမ္းရင္ တက္လမ္းရွိႏိုင္တယ္။</string>
    <string name="two_state">၂-ဂဏန္းအၾကြင္းရသူ မိန္းကေလးမ်ားျဖစ္ရင္ ရုပ္ရည္ေခ်ာေမာလွပမယ္။ အမိရဲ႕ဂုဏ္ေက်းဇူးကို အထူးခံစားရမယ္။ ေန႔ဖြားျဖစ္ရင္ အသားအရည္လတ္ျပီး ညဖြားျဖစ္ရင္ အသားအရည္ခပ္ညိဳညိဳရွိမယ္။ 
        စိတ္ေနစိတ္ထား ျမင့္ျမတ္မယ္။ အၾကံအစည္ ၾကီးက်ယ္မယ္။ သူတစ္ပါး လက္ေအာက္တြင္ ခိုဝင္ခိုကပ္ခ်င္စိတ္ မရွိတတ္။ ေဆြမ်ိဳးဥာတိမ်ားကို အားကိုးစိတ္မရွိ။ မိမိတို႔ရဲ႕ အရည္အေသြး အစြမ္းသတၱိကိုသာ မိမိတို႔အားထားလိုစိတ္ရွိမယ္။ စိတ္ေနစိတ္ထားေျဖာင့္စင္းရိုးသားျပီး ရိုးေျဖာင့္တည္ၾကည္သူမ်ား ျဖစ္မယ္။
        ၂-ခုၾကြင္း ေယာက္်ားေလးမ်ားဟာလည္း အမ်ားအားျဖင့္ လွပေခ်ာေမာတဲ့ အပ်ိဳစဥ္မ်ားႏွင့္ လက္ဆက္ေပါင္းေဖာ္ရကိန္းရွိတယ္။
        သားသမီးရတနာႏွင့္ ပတ္သက္လို႔ကေတာ့ မိမိတို႔အားထား အားကိုးေလာက္တဲ့ သားသမီးရတနာ ထြန္းကားကိန္းမရွိ။ အဖဘက္မွ အေမြအႏွစ္မ်ားလဲ ရရွိခံစားရဖြယ္ရာမရွိ။ စီးပြားကုန္သြယ္ လယ္လုပ္ျခင္းျဖင့္လဲ အက်ိဳးေပးမယ္မဟုတ္။
        မင္းမႈထမ္း၊ စာေရး၊ စာခ်ီ၊ ပြဲစား၊ ေရွ႕ေနအလုပ္မ်ားႏွင့္ အက်ိဳးေပးမည္။
        တကယ္လို႔ အေရာင္းအဝယ္ လုပ္မယ္ဆိုရင္ ေသာၾကာနံသင့္ျဖစ္တဲ့ သစ္သီး၊ သစ္ဥ၊ သစ္ စသည္တို႔ကို ေရာင္းဝယ္ေဖာက္ကားရင္ ပင္ပန္းသေလာက္ အက်ိဳးခံစားရဖြယ္ ရွိတယ္။</string>
    <string name="three_state">၃-ဂဏန္းအၾကြင္းရသူမ်ားကေတာ့ ပထမအရြယ္ျဖစ္တဲ့ ငယ္စဥ္အခါမွာ အနာေရာဂါထူျပီး ခ်ဴခ်ာမယ္။ မိမိတို႔ကို ေမြးဖြားစဥ္က ထိတ္လန္႔ဖြယ္ရာ မီးေလာင္ကိန္း၊ ခိုးကိန္း၊ ျမိဳ႕ေရး၊ ရြာေရးတစ္ခုႏွင့္ ၾကံဳေတြ႕ရတတ္တယ္။
        ညဘက္ေမြးဖြားသူျဖစ္ရင္ အသားညိဳညိဳရွိမယ္။ ရုပ္ရည္အသြင္အျပင္ ႏူးညံ့ေပ်ာ့ေပ်ာင္းျပီး ခ်ိဳသာေခ်ငံစြာ ေျပာဆိုေလ့ ရွိတတ္သူျဖစ္မယ္။ ေန႔ဖြားျဖစ္ရင္ အသားအရည္ျဖဴျပီး အေျပာအဆို ၾကမ္းတမ္းခက္ထန္မယ္။
        မိဘေဆြမ်ိဳးမ်ားႏွင့္ ငယ္စဥ္ကပင္ ေသကြဲ-ရွင္ကြဲ ကြဲကြာရကိန္းရွိတယ္။ ပညာေရးဘက္မွာ ၾကိဳးစားႏိုင္မွ တန္ကာက်မယ္။ ဥာဏ္ထက္ျမက္ရင္ေတာ့ ပညာေရးႏွင့္ပတ္သက္လို႔ အဖ်က္အဆီးအမ်ိဳးမ်ိဳးႏွင့္ ေတြ႕ဆံုရဖြယ္ရာရွိတယ္။
        မွီခိုအားထားေလာက္တဲ့ မိတ္ေကာင္းေဆြေကာင္းရွားပါးတတ္တယ္။ ကိုယ္ထူကိုယ္ထ၊ ကိုယ့္ဒူးကိုယ္ခၽြန္ ၾကိဳးစားေလ့ရွိတယ္။
        ဇာတိခ်က္ေၾကြေမြးရပ္ေျမမွာ ပညာေရး၊ က်န္းမာေရး၊ စီးပြားေရး၊ ေပါင္းသင္းဆက္ဆံေရး မျဖစ္ထြန္းဘူး။ အက်ိဳးေပးေလ့မရွိဘူး။ တျခားျမိဳ႕ရြာေဒသမွာသာ အေျခခ်ျဖစ္ျပီး ေကာင္းက်ိဳးခ်မ္းသာ ရရွိႏိုင္ကိန္းရွိတယ္။
        မိန္းမမ်ားျဖစ္ရင္ လင္ေယာက္်ားအေပၚ ၾသဇာေညာင္းမယ္။ ႏိုင္လိုမင္းထက္ ေျပာဆိုဆက္ဆံတတ္မယ္။ သားေကာင္းသမီးေကာင္း ထြန္းကားကိန္းရွိတယ္။ အားထားအားကိုးေလာက္တဲ့ သားသမီးေခ်ာမ်ားကို ရရွိကိန္းရွိတယ္။ 
        စီးပြားေရးႏွင့္ ပတ္သက္လို႔ အမ်ားအားျဖင့္ မွန္းခ်က္ႏွင့္ ႏွမ္းထြက္မကိုက္ ျဖစ္တတ္ၾကတယ္။ အသင့္အတင့္မွ်သာ ခ်မ္းသာသုခကို ခံစားကိန္းျမင္တယ္။</string>
    <string name="four_state">၄-ဂဏန္းအၾကြင္းရရွိသူမ်ားဟာ ငယ္စဥ္ မိမိတို႔ကိုေမြးစဥ္က က်န္းက်န္းမာမာ ခ်မ္းခ်မ္းသာသာရွိျပီး မိဘရဲ႕ အရိပ္အာဝါသ အရိုက္အရာမ်ားကို ခံစားစံစားရဖြယ္ ရွိတယ္။ 
        ၄-ဂဏန္းအၾကြင္းရတဲ့ သူေတြကေတာ့ ေန႔ဖက္မွာ ဖြားသူျဖစ္ရင္ အသားလတ္မယ္။ ညဖြားျဖစ္ရင္ အသားျဖဴမယ္။
        စိတ္ေနစိတ္ထား ျဖဴစင္ေျဖာင့္မတ္ျပီး အက်င့္ေကာင္း၊ သေဘာေကာင္းသူျဖစ္မယ္။ မာန္မာန ေထာင္လႊားျခင္း၊ မနာလိုဝန္တိုစိတ္မ်ားျခင္း၊ မတရားေသာ အမႈျပဳမူၾကံစည္ျခင္း မရွိတတ္ဘူး။ လံု႔လဝီရိယထားျပီး ၾကံစည္လုပ္ကိုင္တတ္္ၾကသူမ်ား ျဖစ္မယ္။
        ၄-ဂဏန္းအၾကြင္း ေယာက္်ားမ်ားဟာ အမ်ားအားျဖင့္ မယားကံေခသူမ်ားျဖစ္မယ္။ မယားကံမေကာင္းဘူး။ အားကိုးအားထားျပဳႏိုင္ေလာက္တဲ့ မယားမ်ိဳးကို မရတတ္ဘူး။ မိမိိကသာ အရာရာမွာဦးေဆာင္ဦးရြက္လုပ္ရျပီး မိန္းမျဖစ္သူကေတာ့ အိမ္မႈကိစၥေလာက္မွာသာ အားထားရသူျဖစ္မယ္။ 
        ၄-ဂဏန္းအၾကြင္း မိန္းကေလးမ်ားဟာလဲ အမ်ားအားျဖင့္ လင္ကံမေကာင္းဘူး ဆိုရမယ္။ အားကိုးအားထားျပဳေလာက္ေသာ လင္ေကာင္းမ်ားကို မရရွိတတ္ဘူး။ စီးပြားေရး၊ ေငြေရးေၾကးေရးႏွင့္ ပတ္သက္ျပီး တိုးတက္ၾကီးပြားေအာင္ ၾကံေဆာင္လုပ္ကိုင္ႏိုင္တဲ့ လင္ေယာက္်ားမ်ိဳးႏွင့္ ေတြ႕ရခဲတယ္။
        ကုန္ေရာင္းကုန္ဝယ္ လုပ္မည္ဆိုရင္ ေသာၾကာနံ၊ အဂၤါနံႏွင့္ ပတ္သက္တဲ့ ကုန္မ်ားကို ဝယ္ယူေရာင္းခ်တာမ်ိဳးကို အထူးေရွာင္ၾကဥ္ရမယ္။ အဲသည္ ကုန္စည္မ်ားကို အေရာင္းအဝယ္ျပဳရင္ မွန္းခ်က္ႏွင့္ ႏွမ္းထြက္မကိုက္ရံုသာမက ဆံုးရံႈးပ်က္စီးတတ္သည္။
        မင္းမႈထမ္း၊ အစိုးရအရာထမ္း၊ အမႈထမ္းအလုပ္မ်ားႏွင့္ အက်ိဳးမေပးဘူး။ အေျပာအဆို လုပ္ကိုင္မႈ ခၽြတ္ေခ်ာ္တိမ္းေစာင္းျပီး ျပႆနာမ်ားႏွင့္ ဆံုေတြ႕ရကိန္းရွိတယ္။ အေျပာအဆို၊ အေနအထိုင္၊ အသြားအလာ၊ အစစ ဆင္ျခင္တတ္ဖို႔ လိုတယ္။
        ဒါေပမယ့္ ဘဝခရီးလမ္း တစ္ေလွ်ာက္လံုးမွာ ဆင္းရဲဒုကၡမ်ိဳး ၾကီးၾကီးမားမားႏွင့္ ၾကံဳဆံုစရာမရွိဘူး။ ေမြးဖြားရာ ဇာတိခ်က္ေၾကြအရပ္မွာ စီးပြားျဖစ္ကိန္းမရွိ။ အျခားတစ္ျမိဳ႕တစ္ရြာမွာ မိမိတို႔ရဲ႕ ကိုယ္စြမ္းကိုယ္စ၊ ဥာဏ္စြမ္းဥာဏ္စအရ စီးပြားခ်မ္းသာ ၾကီးပြားတိုးတက္ဖို႔ ရွိတယ္။</string>
</resources>