<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#512da8" >

    <LinearLayout
        android:id="@+id/linearId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnOne"
            style="@style/btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_back_one"
            android:text="@string/btnOne_text" />

        <Button
            android:id="@+id/btnTwo"
            style="@style/btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_back_two"
            android:text="@string/btnTwo_text" />

        <Button
            android:id="@+id/btnThree"
            style="@style/btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_back_three"
            android:text="@string/btnThree_text" />

        <Button
            android:id="@+id/btnFour"
            style="@style/btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_back_four"
            android:text="@string/btnFour_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearId"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:src="@drawable/zodiac" />

        <TextView
            android:id="@+id/welcomeTv"
            style="@style/welcome_text_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>